# cpp_starter_project

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
cmake/: Cache.cmake  CompilerWarnings.cmake  Conan.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
src/: CMakeLists.txt
test/: CMakeLists.txt  test.cpp
